--- a/telegram-bot-admin/.env
+++ b/telegram-bot-admin/.env
@@ -3,6 +3,9 @@ SUPER_ADMIN_ID="5773326948"
 GRPC_GO_SERVER_ADDRESS="payme-service:9000"
 GRPC_BOT_SERVER_PORT="50051"
 
+# To'lovlar tushadigan guruh IDsi (Supergroup ID bo'lishi kerak, odatda -100 bilan boshlanadi)
+TELEGRAM_PAYMENT_GROUP_ID="-1002830715959"
+
 GOOGLE_SPREADSHEET_ID="1u4IGH4AQnJ1g-BFubtkc8uhMlqKRWeig7l2436g1Sxk"
 GOOGLE_WORKSHEET_NAMES="T-R,Uch-R"
 GOOGLE_CREDS_FILE="sheetsbot-476708-5b08cf89eabf.json"
