--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       POSTGRES_USER: schooladmin
       POSTGRES_PASSWORD: strongpassword123
       POSTGRES_DB: schooldb
+      TZ: Asia/Tashkent  # <--- QO'SHILDI
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
@@ -40,6 +41,7 @@ services:
       - DATABASE_URL=postgres://schooladmin:strongpassword123@db:5432/schooldb?sslmode=disable
       - APP_PORT=9000
       - BOT_GRPC_SERVICE_ADDR=telegram-bot:50051
+      - TZ=Asia/Tashkent # <--- QO'SHILDI
     networks:
       - yuksalish-net
     ports:
@@ -65,6 +67,7 @@ services:
       - KEY_FILE_PATH=key.pem
       - PAYME_LOGIN=Paycom
       - PAYME_PASSWORD=W@?KvcG&XcdfRX07XBDZIZV9cY6cZDe6gA?O
+      - TZ=Asia/Tashkent # <--- QO'SHILDI
     networks:
       - yuksalish-net
     dns:
@@ -82,6 +85,8 @@ services:
       - payme-service 
     env_file:
       - ./telegram-bot-admin/.env
+    environment:
+      - TZ=Asia/Tashkent # <--- QO'SHILDI
     volumes:
       - ./telegram-bot-admin/database_files:/app/database_files
     networks:
